# discord_bot

./: bot.py  data.py  main.py  pyproject.toml  test.py
backup/: bot_backup.py
