[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5.1.0"
pandas = "^1.2.5"
discord = "^1.7.3"
youtube_dl = "^2021.6.6"
yfinance = "^0.1.59"
geopy = "^2.1.0"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
